Replaced name on all pages, changed flickr search tag

--- a/funeral.html
+++ b/funeral.html
@@ -52,7 +52,7 @@
 
       <div class="jumbotron">
          <h2>Funeral</h2>
-          <p>The funeral takes place the ... at The Chapel of the Chimes</p>
+          <p>The funeral takes place March xxth, 2022 at The Chapel of the Chimes</p>
       </div>
       
     </div>
