--- a/photos.html
+++ b/photos.html
@@ -69,7 +69,7 @@
 
     <div class="jumbotron">
        <h2>Photos</h2>
-        <p>This gallery automatically loads photographs that have been <a href="https://www.flickr.com/search/?q=songsonghe&m=tags&ss=0&ct=0&mt=all&w=all&adv=1">tagged on flickr with "SongSongHe"</a>. If you have only recently created your flickr account, it can take up to 48 hours before your photographs will show up here.</p>
+        <p>This gallery automatically loads photographs that have been <a href="https://www.flickr.com/search/?text=SongSong%20He&m=tags&ss=0&ct=0&mt=all&w=all&adv=1">tagged on flickr with "SongSongHe"</a>. If you have only recently created your flickr account, it can take up to 48 hours before your photographs will show up here.</p>
     </div>
 
     <style type="text/css">
