--- a/index.html
+++ b/index.html
@@ -54,11 +54,7 @@
 
       <div class="lovedone">
 
-        <img class="lovedone-image img-circle pull-right img-responsive" src="images/lovedone-circle.jpeg" alt="placeholder for the picture of your loved one.">
-
-        <!-- Replace the placeholder image by removing the line above, and enabling the line below after uploading your own image. The ideal size is 512x512
-
-        <img class="lovedone-image img-circle pull-right img-responsive" src="./images/lovedone.png"> -->
+        <img class="lovedone-image img-circle pull-right img-responsive" src="./images/lovedone.png">
 
         <h2 class="lovedone-heading">Goodbye SongSong He <span class="text-muted">03.06.2022</span></h2>
         <p class="lead">
